# PDIE

./: .gitignore  README.md  pyproject.toml
installer/: build_setup.bat  build_setup.py  pdie_setup.iss
pdie/: __init__.py  cli.py  engine.py
pdie/analyzers/: __init__.py  cell_analyzer.py  workbook_analyzer.py  workbook_fingerprinter.py  worksheet_analyzer.py
pdie/core/: __init__.py  cell.py  fingerprint.py  workbook.py  worksheet.py
pdie/intelligence/: __init__.py
pdie/metadata/: __init__.py
pdie/package/: __init__.py
pdie/readers/: __init__.py  excel_reader.py
pdie/reports/: __init__.py  html_report.py
pdie/utils/: __init__.py
tests/: __init__.py  conftest.py  test_cell.py  test_cell_analyzer.py  test_cli.py  test_excel_reader.py  test_html_report.py  test_workbook.py  test_workbook_analyzer.py  test_workbook_fingerprinter.py  test_worksheet_analyzer.py
